--- a/bogobogo-frontend/public/index.html
+++ b/bogobogo-frontend/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet"> -->
+    <link href="%PUBLIC_URL%/fonts/Caveat-VariableFont_wght.ttf" rel="stylesheet">
+    <link href="%PUBLIC_URL%/fonts/EBGaramond-VariableFont_wght.ttf" rel="stylesheet">
+    <link href="%PUBLIC_URL%/fonts/EBGaramond-Italic-VariableFont_wght.ttf" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
