--- a/bogobogo-frontend/public/index.html
+++ b/bogobogo-frontend/public/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Serif+SC:wght@200..900&display=swap" rel="stylesheet">
-    <link href="%PUBLIC_URL%/fonts/Caveat-VariableFont_wght.ttf" rel="stylesheet">
-    <link href="%PUBLIC_URL%/fonts/EBGaramond-VariableFont_wght.ttf" rel="stylesheet">
+    <!-- <link href="%PUBLIC_URL%/fonts/Caveat-VariableFont_wght.ttf" rel="stylesheet"> -->
+    <!-- <link href="%PUBLIC_URL%/fonts/EBGaramond-VariableFont_wght.ttf" rel="stylesheet"> -->
     <!-- <link href="%PUBLIC_URL%/fonts/EBGaramond-Italic-VariableFont_wght.ttf" rel="stylesheet"> -->
-    <link href="%PUBLIC_URL%/fonts/NotoSansSC-VariableFont_wght.ttf" rel="stylesheet">
+    <!-- <link href="%PUBLIC_URL%/fonts/NotoSansSC-VariableFont_wght.ttf" rel="stylesheet"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
